added new api endpoint: widList
