# backend/api.yaml
@@ -56,6 +56,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ExecOutput'
+
   /TestTarget:
     get:
       summary: Get TestTarget info by id
@@ -175,6 +176,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/TestTargetResultList'
 
+  /widList:
+    get:
+      summary: Get all existing widget ids
+      responses:
+        200:
+          description: List of wIds
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/wid'
+
 components:
 
   parameters:
@@ -185,10 +199,13 @@ components:
       description: WidgetID
       required: true
       schema:
-        type: string
-        default: "0"
+        $ref: '#/components/schemas/wid'
 
   schemas:
+
+    wid:
+      type: string
+      default: "0"
 
     TestSpec:
       type: object
